stylesheets/style.css
/* ... */
#header #content-table {
  background: #1E1E1E;
  color: #fff;
  display: none;
}

#header #content-table .center {
  padding: 15px;
}

#header #content-table a {
  color: #f1f1f1;
  text-decoration: none;
}

#header #content-table a:hover {
  text-decoration: underline;
}

#content {
  font-family: Georgia, "Times New Roman";
  margin-top: 5px;
  overflow:auto;
  padding-bottom: 150px;
}

#content h1 {
  padding-top: 30px;
  padding-bottom: 5px;
  height: 59px;
  border-bottom: 1px #333 solid;
  font-size: 40px;
  color: #333;
  margin: 0 0 20px 0;
}

#content h2 {
  font-size: 25px;
  color: #333;
  margin: 0 0 20px 0;
  font-weight: bold;
}

#content h3 {
  font-size: 18px;
  font-weight: bold;
  margin: 0 0 10px 0;
}

#content h4 {
  line-height: 25px;
  margin: 0 0 10px 0;
}

#content p {
  font-size: 16px;
  line-height: 20px;
  margin: 0 0px 15px 0;
}

#content object {
  display: block;
  margin: 0 auto;
}

#content strong {
  font-weight: bold;
}

#content a {
  color: #d32525;
}

#content a:hover {
  color: #8c0202;
  text-decoration: none;
}

#content i a, #content i {
  font-size: 18px;
  font-weight: bold;
  color: #333;
}

#content .topic {
  float: left;
}

#books td {
  line-height: 20px;
}

#books i {
  font-weight: bold;
  font-size: 18px;
}

#main {
  background: #f1f1f1;
}

#main, #contribute {
  font-family: 'Lato', sans-serif;
  min-height: 460px;
  overflow: hidden;
}

#contribute {
  padding-bottom: 130px;
}

#main hgroup {
  margin-top: 40px;
}

#main hgroup h1 {
  font-size: 45px;
  text-align: center;
  font-weight: bold;
  color: #3b3b3b;
  letter-spacing: -1px;
}

#main hgroup h2 {
  margin-top: 10px;
  font-size: 16px;
  text-align: center;
  color: #3b3b3b;
}

#main hgroup h2 a, #contribute a {
  color: #d32525;
}

#main hgroup h2 a:hover, #contribute a:hover {
  color: #8c0202;
  text-decoration: none;
}

#contribute {
  width: 800px;
  margin: 0 auto 50px auto;
  color: #3b3b3b;
}

#contribute h1, #contribute h2 {
  font-size: 25px;
  font-weight: bold;
  border-left: 8px #d32525 solid;
  padding-left: 8px;
  margin: 30px 0;
}

#contribute p {
  line-height: 20px;
  font-size: 16px;
  margin-bottom: 10px;
}

#agile-icon {
  position: absolute;
  top: 10px;
  right: 280px;
}

footer {
  background: #e2e2e2;
  padding: 20px 0;
  color: #3b3b3b;
  font:12px Lato, 'sans-serif';
  position: relative;
	margin-top: -130px;
	height: 90px;
	clear:both;
}

#footer-links {
  float: right;
}

#footer-links a {
  display: block;
  float: left;
  margin-left: 10px;
}

#footer-links .improveit-link {
  margin-top: 17px;
}

/*/*====================*/
/*=== Modules Styles ===*/
/*====================*/

#content-table h2 {
  font-weight: bold;
  font-size: 24px;
}

#content-navigation {
  margin: 10px 0;
  width: 100%;
  overflow: hidden;
}

#content-navigation .topic {
  margin: 0 0 15px 0;
  float: left;
}

#content-navigation h3 {
  font-weight: bold;
  font-size: 18px;
}

#content-navigation h4 {
  font-weight: bold;
  font-size: 16px;
  margin-top: 5px;
}

#content-navigation ul {
  float: left;
  margin: 5px 15px 0 0;
  letter-spacing: 0px;
  max-width: 134px;
  list-style: none;
}

#content-navigation li {
  margin: 9px 0 0 0;
  line-height: 18px;
}

#content .book-title {
  border-bottom: 0;
  font-size: 25px;
  line-height: 30px;
}

h1#scrum {
  background: url(/images/main_heading/scrum.gif) no-repeat right bottom;
}

h1#default {
  background: url(/images/main_heading/default.gif) no-repeat right bottom;
}

h1#praticas {
  background: url(/images/main_heading/praticas.gif) no-repeat right bottom;
}

h1#tdd {
  background: url(/images/main_heading/tdd.gif) no-repeat right bottom;
}

h1#comunicacao {
  background: url(/images/main_heading/comunicacao.gif) no-repeat right bottom;
}

h1#coragem {
  background: url(/images/main_heading/coragem.gif) no-repeat right bottom;
}

h1#feedback {
  background: url(/images/main_heading/feedback.gif) no-repeat right bottom;
}

h1#valores {
  background: url(/images/main_heading/valores.gif) no-repeat right bottom;
}

h1#respeito {
  background: url(/images/main_heading/respeito.gif) no-repeat right bottom;
}

h1#simplicidade {
  background: url(/images/main_heading/simplicidade.gif) no-repeat right bottom;
}

h1#integracao_continua {
  background: url(/images/main_heading/integracao_continua.gif) no-repeat right bottom;
}

h1#programacao_par {
  background: url(/images/main_heading/programacao_par.gif) no-repeat right bottom;
}

h1#raiz_do_problema {
  background: url(/images/main_heading/raiz_do_problema.gif) no-repeat right bottom;
}

h1#contrato_escopo_negociavel {
  background: url(/images/main_heading/contrato_escopo_negociavel.gif) no-repeat right bottom;
}

h1#mock_objects {
  background: url(/images/main_heading/mock_objects.gif) no-repeat right bottom;
}

h1#emma {
  background: url(/images/main_heading/emma.gif) no-repeat right bottom;
}

h1#contrato_escopo_negociavel {
  background: url(/images/main_heading/contrato_escopo_negociavel.gif) no-repeat right bottom;
}

h1#contrato_escopo_negociavel {
  background: url(/images/main_heading/contrato_escopo_negociavel.gif) no-repeat right bottom;
}

#hexagon-navigation {
  width: 430px;
  height: 250px;
  overflow: hidden;
  margin: 30px auto;
}

.hexagon {
  width: 170px;
  height: 194px;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  text-align: center;
  margin-top: 15px;
}

.hexagon * {
  -webkit-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}

.hexagon:hover .hexagon-top {
  border-bottom: 50px solid #8c0202; 
  -webkit-transform: translate(0, -10px);
}

.hexagon:hover .hexagon-bottom {
  border-top: 50px solid #8c0202;
  -webkit-transform: translate(0, -10px);
}

.hexagon:hover .hexagon-middle {
  background: #8c0202;
  -webkit-transform: translate(0, -10px);
}

.hexagon-right {
  float: right;
}

.hexagon-left {
  float: left;
}
/* ... */

